# my-logger

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: test.yaml
my-logger/: Cargo.toml
my-logger-core/: Cargo.toml
my-logger-core/src/: console_printer.rs  lib.rs  log_event.rs  log_event_ctx.rs  log_readers.rs  log_statistics.rs  logger.rs  logger_reader.rs  my_logger_inner.rs  populated_params.rs
my-logger/src/: lib.rs
my-seq-logger/: Cargo.toml  README.md
my-seq-logger/src/: lib.rs  log_events_queue.rs  sdk.rs  seq_logger.rs  seq_logger_inner.rs  seq_utils.rs  serializer.rs  settings.rs  upload_logs_chunk.rs  uploader.rs
src/: console_filter.rs  lib.rs  log_event.rs  log_event_ctx.rs  logger.rs  logger_reader.rs  my_logger_inner.rs
