[package]
name = "my-logger-core"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
