[package]
name = "my-seq-logger"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-http = []

[dependencies]
flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger-core = { path = "../my-logger-core" }
my-json = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-json.git" }

hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
